- Gray out units on right-click menu if they have no remaining moves

* RELEASE 17
- Optimize computation of trade networks
 - For details, see the info text file in the Trade Net X folder
- Civ and leader names can vary by era
- Option to measure turn times
- Zone of control changes
  - Allow land-to-sea and sea-to-land attacks, only using bombard stat
  - May be lethal
  - May be exerted by air units
  - Show attack animation even when attacker is not at the top of its stack
- Defensive bombard changes
  - May be lethal
  - May be performed by air units
  - Invisible, undetected units may be made immune
  - May be performed multiple times per turn with blitz
  - Naval units in a city may perform defensive bombard vs land attackers
- Enable resource generating buildings to add the resource's yields to their city
- Display icons for generated resources on top of the generating building
- Allow precision strikes to target tile improvements
- Option not to end a unit's turn after it bombards a barricade
- Fix freezes caused by undisembarkable escorting unit
  - Covered by the disembark immobile bug fix option, which has been renamed
- Fix graphical issues when running on Wine
- Option to allow defensive retreat on water tiles
- Can increase unit maintenance costs based on their build costs
- Adjustable AI worker requirement
- Option to stop AI from escorting units without the "requires escort" flag
- Fix a rare edge case where stack bombard would continue attacking an empty tile
- Option to pack the list of luxuries more tightly into the box on the city screen
- Apply perfume to all unit types & buildings with the specified name
  - Fixes perfume only applying to one sub-type when a unit type has multiple AI strategies
- Option to allow airdrops without airports
- Fix max_ai_naval_escorts setting interfering with group movement of naval units belonging to human players
- Option to allow bombardment of other improvements on a tile with an occupied airfield