@@ -156,6 +156,7 @@ struct c3x_config {
 	int ptw_arty_types_capacity;
 	int * ptw_arty_types; // List of unit type IDs
 	bool restore_unit_directions_on_game_load;
+	bool apply_grid_ini_setting_on_game_load;
 	bool charm_flag_triggers_ptw_like_targeting;
 	bool city_icons_show_unit_effects_not_trade;
 	bool ignore_king_ability_for_defense_priority;
