@@ -69,6 +69,10 @@ replay_ai_moves_in_hotseat_games = false
 ; should be facing. That's what this option does.
 restore_unit_directions_on_game_load = true
 
+; The game stores your map grid setting (on or off) in conquests.ini. It applies that setting after creating a new game, but not after loading a
+; save. That was presumably an oversight and is corrected by this config option.
+apply_grid_ini_setting_on_game_load = true
+
 ; Causes cities to display harbor/airport icons if they have buildings that grant the relevant unit effects (produce veterans & heal in one turn)
 ; instead of buildings that grant sea/air trade. This makes no difference under the standard rules but is useful with mods that separate the unit
 ; effects and trade abilities into different buildings.
